[package]
name = "ftail"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Ftail is simple logging implementation for the `log` crate with support for multiple drivers."
repository = "https://github.com/tjardoo/ftail"
keywords = ["log", "logging", "filelog"]

[dependencies]
log = { version = "0.4", features = ["std"] }
chrono = "0.4"
chrono-tz = { version = "0.10", optional = true }

[features]
default = []
timezone = ["chrono-tz"]

[workspace]
members = [
    "examples/console",
    "examples/formatted_console",
    "examples/single_file",
    "examples/daily_file",
    "examples/stack",
    "examples/custom",
]
